<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagebackground"
    tools:context=".LoginSignUp">

    <ImageView
        android:id="@+id/logos"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo1"
        android:contentDescription="@string/logos" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="176dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/date_design"
        android:padding="20dp"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signIn"
        android:layout_marginBottom="98dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/date_design"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="129dp"
        android:layout_marginStart="175dp"
        android:fontFamily="@font/marck_script"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        android:textSize="23sp" />


</RelativeLayout>