<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagebackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logos"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo1"
        android:contentDescription="@string/logos" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="261dp"
        android:fontFamily="@font/marck_script"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="96sp" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/arrow"
        android:contentDescription="@string/arrows"/>

</RelativeLayout>