<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logosregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/logos"
                android:src="@drawable/logo1" />

            <EditText
                android:id="@+id/names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs_design"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:autofillHints=""
                />


            <EditText
                android:id="@+id/signupID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs_design"
                android:hint="ID"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/passwordsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs_design"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/reenterpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/inputs_design"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="*Password must be 6-15 character"
                android:padding="20dp"
                android:textSize="13sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/GosignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/buttons"
                android:padding="20dp"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>