<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoslogin"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logos"
        android:src="@drawable/logo1" />

    <EditText
        android:id="@+id/loginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoslogin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs_design"
        android:hint="ID"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:autofillHints="" />



    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginID"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/loginpassword"
        android:layout_marginTop="7dp">
        
        <CheckBox
            android:id="@+id/ingatsaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:text="@string/remember_me"
            android:gravity="center_vertical"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="19dp"
            />

        <TextView
            android:id="@+id/lupapassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginLeft="100dp"
            />
        
    </LinearLayout>

    <Button
        android:id="@+id/GosignIn"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layouts"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adminpanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="For Admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/GosignIn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="23dp"
        />

</RelativeLayout>